добавлены обработчики на кнопки

--- a/firts-page.html
+++ b/firts-page.html
@@ -9,15 +9,17 @@
 </head>
 <body>
     <main class="main center">
-        <section class="box">
-            <h1 class="box__text">Выбери сложность</h1>
-            <div class="box__numbers">
-                <button class="number">1</button>
-                <button class="number">2</button>
-                <button class="number">3</button>
+        <section class="window">
+            <h1 class="window__title">Выбери сложность</h1>
+            <div class="window__level">
+                <button class="window__level-button" data-level="Легкий">1</button>
+                <button class="window__level-button" data-level="Средний">2</button>
+                <button class="window__level-button" data-level="Сложный">3</button>
             </div>
-            <button class="box__button">Старт</button>
+            <button class="start__button" id="start_btn">Старт</button>
         </section>
+        
     </main>
+    <script src="index.js"></script>
 </body>
 </html>
