--- a/index.html
+++ b/index.html
@@ -9,15 +9,11 @@
 </head>
 
 <body>
-    <!--<div id="main" class="center"></div>
+    <!--<div id="main" class="center"></div>-->
     <div class="game__content">
-        <header class="header">
-            <div class="header-box">   
-            </div>
-        </header>-->
         <main>
             <section class="game__section">
-                <div class="game__section_cards box"></div>
+                <div class="game__section_cards"></div>
             </section>
         </main>
     </div>
