--- a/index.html
+++ b/index.html
@@ -5,18 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-   <!--<link rel="stylesheet" href="./src/style.css">-->
+    <link rel="stylesheet" href="./src/style.css">
 </head>
 
 <body>
-    <!--<div id="main" class="center"></div>-->
-    <div class="game__content">
-        <main>
-            <section class="game__section">
-                <div class="game__section_cards"></div>
-            </section>
-        </main>
-    </div>
+    <div class="game__section"></div>
     <div class="winner__confetti"></div>
 </body>
 
